<resources>
    <string name="app_name">7aja</string>

    <string name="title_activity_ad">AdActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ad">advertisement</string>
    <string name="error">some thing went wrong</string>
    <string name="home">الرئيسية</string>
    <string name="logOut">تسجيل خروج</string>
    <string name="lang">اللغة</string>
    <string name="profile">الملف االشخصي</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about">عن التطبيق</string>
    <string name="policy">policy</string>
    <string name="contact">تواصل معنا</string>
    <string name="conditions">الاحكام والشروط</string>
    <string name="wait">برجاء الانتظار</string>
    <string name="day">day</string>
    <string name="views">views</string>
    <string name="Additions">Additions</string>
    <string name="desc">description</string>
    <string name="price">price</string>
    <string name="name">user name</string>
    <string name="pre_ads">previouse user ads</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="categories">categories</string>
    <string name="offers">offers</string>
    <string name="notifications">notifications</string>
    <string name="messages">messages</string>
    <string name="more">more</string>
    <string name="email">email</string>
    <string name="pass">password</string>
    <string name="resetPass">forget password ?</string>
    <string name="register">register</string>
    <string name="login_message">login credentials incorrect</string>
    <string name="success">login success</string>
    <string name="correct_pass">enter correct password more than 6 numbers</string>
    <string name="correct_phone">enter correct phone number</string>
    <string name="correct_email">please enter correct email</string>
    <string name="login">login</string>
    <string name="phone">phone</string>
    <string name="confirm_pass">confirm password</string>
    <string name="mismatch_pass">passwords mismatch</string>
    <string name="correct_name">enter correct name</string>
    <string name="added">added to Favorites</string>
    <string name="select_cat">اختر القسم</string>
    <string name="upload_img">please upload images max 6</string>
    <string name="product_info">Ad information</string>
    <string name="pro_name_ar">اسم المنتج بالغة العربية</string>
    <string name="pro_name_en">product name in english</string>
    <string name="pro_price">price</string>
    <string name="pro_discount">discount</string>
    <string name="pro_quantity">product quantity</string>
    <string name="pro_tags">product tags</string>
    <string name="pro_tags_en">علامات المنتج</string>
    <string name="pro_tags_ar">علامات المنتج</string>
    <string name="pro_description_ar">التفاصيل</string>
    <string name="pro_description_en">description in english</string>
    <string name="product_attributes">product Attributes</string>
    <string name="add_pro">add product</string>
    <string name="select_img">please select product images</string>
    <string name="yourAd">your Ad</string>
    <string name="phone_contact">ادخل رقم الهاتف للتواصل</string>
    <string name="send">send</string>
    <string name="send_to">send to</string>
    <string name="registerNew">Register New Account ?</string>
    <string name="selectCategoryToShowAtt">اختر القسم لكي يظهر لك الخصائص</string>
    <string name="addProduct">اضف اعلانك</string>
    <string name="city">المدينة</string>
    <string name="no_att">لم يتم اضافة خصائص هذا المنتج</string>
    <string name="fav">ألمفضلة</string>
    <string name="login_first">من فضلك سجل الدخول اولا</string>
    <string name="price_unit">دينار</string>
    <string name="follow_us">تابعنا علي</string>
    <string name="facebook">facebook</string>
    <string name="youtube">youtube</string>
    <string name="insta">instagram</string>
    <string name="support">الدعم الفني</string>
    <string name="delegates">المندوبين</string>
    <string name="my_ads">اعلاناتي</string>
    <string name="my_balance">رصيدي</string>
    <string name="messageSubject">عنوان الرسالة</string>
    <string name="message">الرسالة</string>
    <string name="requird">مطلوب</string>
    <string name="send_message_done">تم ارسال الرسالة بنجاح</string>
    <string name="callUs">اتصل بنا</string>
    <string name="or">أو</string>
    <string name="sendUS">راسلنا وسوف يتم التواصل معك من خلال الدعم الفني</string>
    <string name="productDetails">product details</string>
    <string name="ads">اعلانات</string>
    <string name="chatWith">chat with</string>
    <string name="search">ادخل كلمة البحث</string>
    <string name="priceFrom">السعر من</string>
    <string name="priceTo">السعر الي</string>
    <string name="search_but_title">ابحث</string>
    <string name="delete_message">هل تريد مسح الرسالة</string>
    <string name="delete">حذف</string>
    <string name="free_add_product">يمكنك اضافة اعلانك مجانا لفترة محدودة</string>
    <string name="cancel">الغاء</string>
    <string name="done">تم</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="exit_message">هل تريد الخروج من التطبيق ؟</string>
    <string name="payment_failed_msg">لم تتم عملية الدفع</string>
    <string name="address">Address</string>
    <string name="whats_app">Whats App Number</string>
    <string name="max_letters">600 / 0 حرف</string>
    <string name="letter">letters</string>
    <string name="acceptPolicy">اوافق علي الشروط والاحكام</string>
    <string name="activate_account">Account Activation</string>
    <string name="resend">Resend Activation Code ?</string>
    <string name="resend_code_done">تم ارسال كود التفعيل بنجاح</string>
    <string name="enter_code_msg">ادخل كود التفعيل الذي تم ارساله الي رقم الهاتف</string>
    <string name="forget_pass_msg">ادخل رقم الهاتف و سوف يتم ارسال رقم مرور جديد اليك</string>
    <string name="twitter">twitter</string>
    <string name="balance_msg">الاعلانات التي تم نشرها منذ اشتراكك في تطبيق حاجة</string>
    <string name="edit_profile">تعديل الملف الشخصي</string>
    <string name="accept">موافق</string>
    <string name="no_free_ads">لايوجد اعلانات مجلانية لديك تكلفة هذا الاعلان</string>
    <string name="update_pro">تحديث الاعلان</string>
    <string name="ad_stared">جعل االاعلان مميز</string>
    <string name="phone_hint">phone or email</string>
    <string name="kwd">دينار</string>
    <string name="save_ad">حفظ كمسودة</string>
    <string name="edit_ad">تعديل الاعلان</string>
    <string name="select_time_to_star">اختر وقت التمييز</string>
    <string name="hours">12 ساعة</string>
    <string name="one_day">يوم واحد</string>
    <string name="two_day">يومين فقط</string>
    <string name="published">Publish the ad</string>
    <string name="dreft">مسودة</string>
    <string name="faq">الاسئلة الشائعة</string>
    <string name="enter">enter</string>
</resources>
