<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/menu_fav"
            android:title="@string/fav" />
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/menu_info"
                android:title="@string/about" />
        <item
                android:id="@+id/nav_policy"
                android:icon="@drawable/menu_terms"
                android:title="@string/policy" />
        <item
                android:id="@+id/nav_conditions"
                android:icon="@drawable/menu_terms"
                android:title="@string/conditions" />
        <item
                android:id="@+id/nav_logOut"
                android:icon="@drawable/menu_logout"
                android:title="@string/logOut" />
        <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/lang"
            android:title="@string/lang" />
    </group>

</menu>
