<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="@dimen/_280sdp"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:layout_gravity="center"
              android:padding="@dimen/_16sdp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_message"
            android:layout_margin="@dimen/_4sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textSize="@dimen/_16ssp"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_marginEnd="@dimen/_20sdp"
                android:padding="@dimen/_4sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_18ssp"/>

        <TextView
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_gravity="start"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginEnd="@dimen/_20sdp"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_18ssp"/>

    </LinearLayout>

</LinearLayout>